--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,3 +36,16 @@ a {
 a:hover {
     color: #900C3F; /* Deep red on hover */
 }
+
+.contact-block {
+  margin-top: 1rem;
+}
+
+.contact-line {
+  margin: 0.5rem 0 0.25rem 0;
+}
+
+.contact-links {
+  margin: 0;
+  line-height: 1.6;
+}
