--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,3 +49,10 @@ a:hover {
   margin: 0;
   line-height: 1.6;
 }
+header img {
+  max-width: 180px;
+  height: auto;
+  border-radius: 4px;
+  display: block;
+  margin-bottom: 1rem;
+}
